syntax = "proto3";

import "service/userMessage.proto";
import "service/channelBuilder.proto";
import "service/topology/fullMesh.proto";
import "service/webRTCBuilder.proto";
import "channel.proto";
import "signaling.proto";

message Message {
  uint32 senderId = 1;
  uint32 recipientId = 2;
  uint32 serviceId = 3;
  bytes content = 4;
}
